<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="88dp"
            android:layout_height="135dp"
            android:layout_marginLeft="158dp"
            android:layout_marginTop="80dp"
            app:srcCompat="@drawable/loginface"
            tools:srcCompat="@drawable/loginface" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:hint="@string/name"
            android:textAlignment="center"></EditText>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:hint="@string/pswd"
            android:inputType="textPassword"
            android:textAlignment="center"></EditText>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="LOGIN"
            android:textStyle="bold"
            android:background="@color/login_button_background"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"/>

        <Button
            android:id="@+id/btn_link_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_link_signup"
            android:background="@null"
            android:layout_marginTop="3dp"
            android:textColor="@android:color/black"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"/>
    </LinearLayout>
</RelativeLayout>